--- a/AIAA5023/Assignment2/assignment2-attention/Transformer_Captioning.ipynb
+++ b/AIAA5023/Assignment2/assignment2-attention/Transformer_Captioning.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -633,13 +633,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myhelper",
+   "display_name": "aiaa",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.20"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
